add more weekly digests

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,9 @@
 <p>Get your weekly dose of crypto, blockchain, and nft related news and tool.</p>
 <p>Feel free to reach out at <a href="mailto:oracle@smartcontractstack.com">oracle@smartcontractstack.com</a></p>
 <p><a href="https://twitter.com/smartcontractsk">@smartcontractsk</a> ⬡ <a href="https://smartcontractstack.com/index.xml">rss</a></p>
+<p>⬡ ⬡ ⬡ ⏣ ⬡ ⬡ ⬡</p>
+<p><strong>more weekly digests</strong></p>
+<p><a href="https://perprompt.com">perprompt</a> ⬡ <a href="https://stretcht.com">stretcht</a></p>
 
     </div>
   
